5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1590_2894.log
== TEST (2019-03-20 15:03:32) 
-- CODE:
var = int (input("Numero de jogos:"))

# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 6
    ????? = f???t(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:03:42) 
-- CODE:
var = int (input("Numero de jogos:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = int (input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:05:18) 
-- CODE:
var = int (input("Numero de jogos:"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = int (input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:08:52) 
-- CODE:
var = int(input("Numero de jogos:"))
print("Voce digitou", var)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:09:11) 
-- CODE:
var = int(input("Numero de jogos:"))
print("Voce digitou", var)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:09:18) 
-- CODE:
var = int(input("Numero de jogos:"))
print("Voce digitou", var)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:11:44) 
-- CODE:
var = int(input("Numero de jogos:"))
print("Voce digitou", var)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:12:50) 
-- CODE:
var = int(input("Preco do jogos:"))
print("Voce digitou", var)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:21:50) 
-- CODE:
var = int(input("numero do jogo:"))
precoA = 10.0
precoB = 20.0
precoC = 30.0
precoD = 45.0
precoE = 12.0
precoF = 11.0
precoG = 2.00
precoH = 1.00 
total = precoA* var + precoB * var + precoC * var + precoD * var + precoE * var + precoF * var + precoG * var
print(total)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:22:37) 
-- CODE:
var = float(input("numero do jogo:"))
precoA = 10.0
precoB = 20.0
precoC = 30.0
precoD = 45.0
precoE = 12.0
precoF = 11.0
precoG = 2.00
precoH = 1.00 
total = precoA* var + precoB * var + precoC * var + precoD * var + precoE * var + precoF * var + precoG * var
print(total)




-- OUTPUT:
159.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:23:03) 
-- CODE:
var = float(input("numero do jogo:"))
precoA = 10.0
precoB = 20.0
precoC = 30.0
precoD = 45.0
precoE = 12.0
precoF = 11.0
precoG = 2.00
precoH = 1.00 
total = precoA* var + precoB * var + precoC * var + precoD * var + precoE * var + precoF * var + precoG * var
print(total)




-- OUTPUT:
159.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:25:58) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo?"))

total = (valor * 8) + 45
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:26:20) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo?:"))

total = (valor * 8) + 45
print(total)
-- EXECUTION TIME:
0.215682
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:26) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo?:"))

total = (valor * 8) + 45
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:56) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo?:"))

total = (valor * 8) + 45
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
